--- a/Evaluation/evaluation.tex
+++ b/Evaluation/evaluation.tex
@@ -33,12 +33,11 @@
 \subsubsection{Clicking on table will bring up a window which shows the status such as the date and food items ordered with noticeable order modification options}
 \begin{itemize} 
 	\item Objective has mostly been met
-	\item The user would have to select the table radio button and then click on select
+	\item The user would have to select the table radio button and then click on Select Table
 	\item The table has to be occupied to bring up the status window
-<<<<<<< HEAD
-=======
+
 \end{itemize}
->>>>>>> branch 'master' of https://github.com/thamtommy/COMP4Coursework.git
+
 \section{Effectiveness}
 
 \subsection{Order alterations}
@@ -46,11 +45,8 @@
 \begin{itemize}
 	\item Objective has been met
 	\item The application has clear Add and Delete buttons (User Questionnaire)
-<<<<<<< HEAD
-	\item 
-=======
 	\item  a
->>>>>>> branch 'master' of https://github.com/thamtommy/COMP4Coursework.git
+
 \end{itemize}
 
 
