--- a/Manual/manual.tex
+++ b/Manual/manual.tex
@@ -198,12 +198,14 @@ How do I add an item to the order? & 5.3.12& \\ \hline
 
 2. Click on "Add Item" and the add item screen should appear.
 
-3. Fill in the fields at the bottom where the first field is for the item name, the second for the price and the third is a drop down where you would have to select what item type it is
+
 
 \begin{figure}[H]
     \includegraphics[height = 9cm]{./Manual/images/AddItem2} 
     \caption{} \label{fig:additem2}
 \end{figure}
+
+3. Fill in the fields at the bottom where the first field is for the item name, the second for the price and the third is a drop down where you would have to select what item type it is
 
 \begin{figure}[H]
     \includegraphics[height = 9cm]{./Manual/images/AddItem3} 
@@ -211,6 +213,8 @@ How do I add an item to the order? & 5.3.12& \\ \hline
 \end{figure}
 
 4. Click on Add Item after filling in the fields and the item should appear in the table above.
+
+\newpage
 
 \subsection{How do I delete an item off the menu?}
 1. Click on Item Menu at the top on the menu bar.
@@ -222,15 +226,17 @@ How do I add an item to the order? & 5.3.12& \\ \hline
     \caption{} \label{fig:deleteitem1}
 \end{figure}
 
-3.  You can either delete an item by inputting the item name or its ID at the respective fields. The first field is for the Item Name and the second is for the ID. You would also have to click on the correct 'Delete Item' button - first button( same row as item name) is for the item name and second is for the id.
 
 \begin{figure}[H]
     \includegraphics[height = 9cm]{./Manual/images/DeleteItem2} 
     \caption{} \label{fig:deleteitem2}
 \end{figure}
 
+3.  You can either delete an item by inputting the item name or its ID at the respective fields. The first field is for the Item Name and the second is for the ID. You would also have to click on the correct 'Delete Item' button - first button( same row as item name) is for the item name and second is for the id.
+
 4. The item will delete if you successfully fill in the field. The item will be deleted from the table above the fields.
 
+\newpage
 \subsection{How do I update an item's price?}
 1. Click on "Item Menu" at the top on the menu bar
 
@@ -240,18 +246,20 @@ How do I add an item to the order? & 5.3.12& \\ \hline
     \caption{} \label{fig:updateitem1}
 \end{figure}
 
-3. Use the table above to assist you on what item you wish to update.
-
-4. Fill in the fields - first field is for the item ID and second is for the price you wish to change it to
-
-5. Click on "Update Item"
 \begin{figure}[H]
     \includegraphics[height = 9cm]{./Manual/images/UpdateItem2} 
     \caption{} \label{fig:updateitem2}
 \end{figure}
 
+3. Use the table above to assist you on what item you wish to update.
+
+4. Fill in the fields - first field is for the item ID and second is for the price you wish to change it to
+
+5. Click on "Update Item"
+
 6. The item should successfully update - you can check with the item table above.
 
+\newpage
 \subsection{How do I add a booking?}
 1. Click on "Bookings" at the top on the menu bar
 
@@ -281,6 +289,7 @@ The table number field is a drop down box which has 16 numbers as there are 16 t
 
 5. The booking should appear in the table above if it has been created successfully.
 
+\newpage
 \subsection{How do I delete a booking?}
 
 %\subsubsection{Using the menu bar}
@@ -295,6 +304,7 @@ The table number field is a drop down box which has 16 numbers as there are 16 t
     \caption{} \label{fig:deletebooking2}
 \end{figure}
 
+\newpage
 \subsection{How do I update a booking?}
 
 \begin{figure}[H]
@@ -307,6 +317,7 @@ The table number field is a drop down box which has 16 numbers as there are 16 t
     \caption{} \label{fig:updatebooking2}
 \end{figure}
 
+\newpage
 \subsection{How do I manage an order for a table?}
 First of all, you have to assign the customer to the table. Assuming the customer has booked in advance, follow these steps:
 
@@ -321,10 +332,11 @@ First of all, you have to assign the customer to the table. Assuming the custome
 3. Click on "Select" beside the drop down box
 
 \begin{figure}[H]
-    \includegraphics[height = 9cm]{./Manual/images/base/assignExample2} 
+    \includegraphics[width = 12cm]{./Manual/images/base/assignExample2} 
     \caption{} \label{fig:assignex2}
 \end{figure}
 
+\newpage
 \subsection{A customer has come in without booking in advance how do I assign him to a table?}
 Assuming a group of customers wanted to come in and you wanted to assign them to table 1.
 
@@ -343,6 +355,7 @@ Assuming a group of customers wanted to come in and you wanted to assign them to
     \caption{} \label{fig:assigncust3}
 \end{figure}
 
+\newpage
 \subsection{How do I add an item to an order}
 
 1. Go to the selected table's manage order box by selecting the table and clicking on 'Select Table' at the main screen.
@@ -364,6 +377,7 @@ Assuming a group of customers wanted to come in and you wanted to assign them to
     \caption{} \label{fig:additemorder3}
 \end{figure}
 
+\newpage
 \subsection{How do I delete an item off an order}
 
 \begin{figure}[H]
@@ -381,6 +395,7 @@ Assuming a group of customers wanted to come in and you wanted to assign them to
     \caption{} \label{fig:deleteitemorder3}
 \end{figure}
 
+\newpage
 \subsection{How do I print an invoice?}
 There are two ways to do so, through the manage order or from 'Search Order' on the tool bar.
 
@@ -396,7 +411,7 @@ You will most likely find this method more convenient after a table has just fin
 2. Click on 'Finish' after selecting the print options and the invoice should now begin to print
  
 \begin{figure}[H]
-    \includegraphics[height = 9cm]{./Manual/images/PrintInvoice2} 
+    \includegraphics[width = 9cm]{./Manual/images/PrintInvoice2} 
     \caption{} \label{fig:printinvoice2}
 \end{figure}
 
