--- a/Testing/testing.tex
+++ b/Testing/testing.tex
@@ -246,21 +246,21 @@ The actual results for the tests can be found on the detailed plans, there is a 
 \subsubsection{From main screen to manage bookings (Test 1.09)}
 
 \begin{figure}[H]
-    \includegraphics[height = 20cm]{./Testing/images/test1}
+    \includegraphics[height = 17cm]{./Testing/images/test1}
     \caption{Manage Booking layout} \label{fig:Test1}
 \end{figure}
 
 \subsubsection{Add Booking screen from manage bookings (Test 1.10)}
 
 \begin{figure}[H]
-    \includegraphics[height = 20cm]{./Testing/images/test2.pdf}
+    \includegraphics[height = 15cm]{./Testing/images/test2.pdf}
     \caption{Add Booking} \label{fig:Test2}
 \end{figure}
 
 \subsubsection{Delete Booking screen from manage bookings (Test 1.13)}
 
 \begin{figure}[H]
-    \includegraphics[height = 20cm]{./Testing/images/test3.pdf}
+    \includegraphics[height = 15cm]{./Testing/images/test3.pdf}
     \caption{Delete Booking layout} \label{fig:Test3}
 \end{figure}
 
@@ -271,28 +271,28 @@ The actual results for the tests can be found on the detailed plans, there is a 
 \subsubsection{Search Order from tool bar (Test 1.21)}
 
 \begin{figure}[H]
-    \includegraphics[height = 15cm]{./Maintenance/images/png/screen17}
+    \includegraphics[width = 15cm]{./Maintenance/images/png/screen17}
     \caption{Search Order layout} \label{fig:searchOrder}
 \end{figure}
 
 \subsubsection{Assign Customer to table validation (Test 2.04)}
 
 \begin{figure}[H]
-    \includegraphics[width = 20cm]{./Testing/images/test4.pdf}
+    \includegraphics[width = 15cm]{./Testing/images/test4.pdf}
     \caption{Assign customer validation} \label{fig:Test4}
 \end{figure}
 
 \subsubsection{Leave Telephone Number field empty error (Test 2.08)}
 
 \begin{figure}[H]
-    \includegraphics[width = 20cm]{./Testing/images/test12}
+    \includegraphics[width = 15cm]{./Testing/images/test12}
     \caption{Error box pop up} \label{fig:Test12}
 \end{figure}
 
 \subsubsection{Telephone Number boundary test (Test 2.08.02)}
 
 \begin{figure}[H]
-    \includegraphics[width = 20cm]{./Testing/images/test13}
+    \includegraphics[width = 15cm]{./Testing/images/test13}
     \caption{Error box pop up} \label{fig:Test13}
 \end{figure}
 
@@ -301,14 +301,14 @@ The actual results for the tests can be found on the detailed plans, there is a 
 \subsubsection{Add Item to Menu verification (Test 2.13.01)}
 
 \begin{figure}[H]
-    \includegraphics[width = 20cm]{./Testing/images/test11}
+    \includegraphics[width = 15cm]{./Testing/images/test11}
     \caption{Item add verification} \label{fig:Test11}
 \end{figure}
 
 \subsubsection{Manage Order Box from Assign Customer (Test 3.03) }
 
 \begin{figure}[H]
-    \includegraphics[width = 20cm]{./Testing/images/test5.pdf}
+    \includegraphics[width = 18cm]{./Testing/images/test5.pdf}
     \caption{Check all details transferred} \label{fig:Test5}
 \end{figure}
 
@@ -322,21 +322,21 @@ The actual results for the tests can be found on the detailed plans, there is a 
 \subsubsection{Total Price Update (Test 4.03)}
 
 \begin{figure}[H]
-    \includegraphics[width = 20cm]{./Testing/images/test10}
+    \includegraphics[width = 16cm]{./Testing/images/test10}
     \caption{Total Price does not update at the manage order box after adding item} \label{fig:Test10}
 \end{figure}
 
 \subsubsection{Increase Quantity Check (Test 4.05)}
 
 \begin{figure}[H]
-    \includegraphics[width = 20cm]{./Testing/images/Test6.pdf}
+    \includegraphics[width = 15cm]{./Testing/images/Test6.pdf}
     \caption{Quantity check} \label{fig:Test6}
 \end{figure}
 
 \subsubsection{Checking if booking \& customer details has stored correctly (Test 4.09) } 
 
 \begin{figure}[H]
-    \includegraphics[width = 20cm]{./Testing/images/test9}
+    \includegraphics[width = 15cm]{./Testing/images/test9}
     \caption{Adding a booking also creates a new customer record} \label{fig:Test9}
 \end{figure}
 
@@ -350,14 +350,14 @@ The actual results for the tests can be found on the detailed plans, there is a 
 \subsubsection{Search Order tab from tool bar (Test 4.08.02)}
 
 \begin{figure}[H]
-    \includegraphics[width = 20cm]{./Testing/images/booking11.pdf}
+    \includegraphics[width = 15cm]{./Testing/images/booking11.pdf}
     \caption{Checking the search function} \label{fig:searchFunction}
 \end{figure}
 
 \subsubsection{Referential Integrity test relating the deletion of a booking (Test 6.03)}
 
 \begin{figure}[H]
-    \includegraphics[width = 20cm]{./Testing/images/booking11delete.pdf}
+    \includegraphics[width = 16cm]{./Testing/images/booking11delete.pdf}
     \caption{Checking if the order is deleted after deleting booking ID 11} \label{fig:searchDeletedBooking}
 \end{figure}
 
